<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:clipToPadding="false"
android:overScrollMode="never"
android:padding="@dimen/_24sdp"
android:scrollbars="none"
android:background="@color/Pure_White"
tools:context=".activities.login_activity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/OlimpoFoto"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:background="@drawable/olimpo_logo"
        tools:srcCompat="@drawable/olimpo_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/bem_vindo"
        android:textColor="@color/Black"
        android:textSize="@dimen/_14ssp"
        android:layout_marginBottom="@dimen/_20sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColorHint="@color/Blue"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/borda_cinza"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/Blue"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:layout_marginBottom="@dimen/_20ssp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColorHint="@color/Blue"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/borda_cinza"
            android:hint="@string/senha"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/Blue"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:animateLayoutChanges="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/entrar"
            android:backgroundTint="@color/Blue"
            android:textColor="@color/Pure_White"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_100sdp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </FrameLayout>



    <TextView
        android:id="@+id/textCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/cadastrar_se"
        android:textColor="@color/Blue"
        android:textSize="@dimen/_13ssp"
        />

</LinearLayout>
</ScrollView>